--- a/PMS/PMS.csproj
+++ b/PMS/PMS.csproj
@@ -182,12 +182,17 @@
     <Compile Include="Migrations\202011280057293_modelupdate.designer.cs">
       <DependentUpon>202011280057293_modelupdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011281724032_UpdatingModelForTask.cs" />
+    <Compile Include="Migrations\202011281724032_UpdatingModelForTask.designer.cs">
+      <DependentUpon>202011281724032_UpdatingModelForTask.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Common.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ProjectRepository.cs" />
+    <Compile Include="Repositories\TaskRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -226,6 +231,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011280057293_modelupdate.resx">
       <DependentUpon>202011280057293_modelupdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011281724032_UpdatingModelForTask.resx">
+      <DependentUpon>202011281724032_UpdatingModelForTask.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
